--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class='form-group'>
                   <input type='password' class='form-control' id='password' placeholder='Password'>
                 </div>
-                <button type='submit' class='btn btn-success col-xs-12 col-sm-12 col-md-12 col-lg-12'>Sign in</button>
+                <button type='submit' class='btn btn-success col-xs-12 col-sm-12 col-md-12 col-lg-12'>Sign In</button>
               </form>
             </div>
 
@@ -82,7 +82,7 @@
                   </div>
                 </div>
 
-                <button type='submit' class='btn btn-success col-xs-12 col-sm-12 col-md-12 col-lg-12'>Sign in</button>
+                <button type='submit' class='btn btn-success col-xs-12 col-sm-12 col-md-12 col-lg-12'>Sign Up</button>
               </form>
             </div>
           </div>
