--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <div><h1>BE PODUCTIVE</h1></div>
       </div>
 
-      <div class='centered col-xs-offset-1 col-xs-6 col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 col-lg-offset-3 col-lg-2'>
+      <div class='centered col-xs-offset-1 col-xs-6 col-sm-offset-1 col-sm-5 col-md-offset-1 col-md-5 col-lg-offset-2 col-lg-3'>
         <div class='container-fluid sign-form-container'>
           <ul class='row nav nav-pills'>
-            <li class='active'><a data-toggle='tab' href='#sign_in'>SIGN IN</a></li>
-            <li><a data-toggle='tab' href='#sign_up'>SIGN UP</a></li>
+            <li><a data-toggle='tab' href='#sign_in'>SIGN IN</a></li>
+            <li class='active'><a data-toggle='tab' href='#sign_up'>SIGN UP</a></li>
           </ul>
 
           <div class='tab-content'>
-            <div id='sign_in' class='tab-pane fade in active'>
+            <div id='sign_in' class='tab-pane fade'>
               <form>
                 <div class='form-group'>
                   <input type='email' class='form-control' id='email' placeholder='Email'>
@@ -46,7 +46,7 @@
               </form>
             </div>
 
-            <div id='sign_up' class='tab-pane fade'>
+            <div id='sign_up' class='tab-pane fade in active'>
               <form>
                 <div class='form-group'>
                   <input type='text' class='form-control' id='first_name' placeholder='First Name'>
